Fix the translations for the channel modes

Previously the channel modes were loaded into the hash at runtime.
Now, we load it when it's needed, coincidentally after KInstance
has been started, so the i18n() calls now work.
BUG:226377